--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Yoh Zhi Ying # your name (or website title) here
-logo: "/images/user2.JPG?raw=true" # your photo (or logo) here
+logo: "/images/profile.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   2nd year Computer Science with Artificial Intelligence student from University of Nottingham Malaysia
   <br><br>
